[B]1.0.1[/B]
- added missing logos (removed unused)
- added getSettingAsInt
- added LOCAL_MAP
- improved simplecache usage (custom time set for different use)
- improved cleanTitle (clean if it starts with playlist title)
- better notification ID > NAME
- improved media url check
- moved libraries from resources to libs
- added .gitignore and removed garbage

[B]1.0.0[/B]
- first public release
- code cleanup, unix eol

[B]0.0.7[/B]
- removed phate89 library and use a custom one
- logging and notification cleanup

[B]0.0.6[/B]
- code cleanup
- added some more logos
- thumb > icon for playlist images
- removed vod acces token method

[B]0.0.5[/B]
- code improvements
- using simplecache

[B]0.0.4[/B]
- code improvements
- added fanart to listitems

[B]0.0.3[/B]
- removed unnecessary library
- using phate89 kodi library
- code refactoring

[B]0.0.2[/B]
- added playlists

[B]0.0.1[/B]]
- first release